WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41733
Fix </optgroup> in "in select" mode
https://bugs.webkit.org/show_bug.cgi?id=41733
Summary
Fix </optgroup> in "in select" mode
Eric Seidel (no email)
Reported
2010-07-06 21:07:36 PDT
Fix </optgroup> in "in select" mode
Attachments
Patch
(5.10 KB, patch)
2010-07-06 21:10 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch
(5.69 KB, patch)
2010-07-06 21:14 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2010-07-06 21:10:49 PDT
Created
attachment 60675
[details]
Patch
Adam Barth
Comment 2
2010-07-06 21:14:50 PDT
Comment on
attachment 60675
[details]
Patch Please add changelog for layouttests :)
Eric Seidel (no email)
Comment 3
2010-07-06 21:14:57 PDT
Created
attachment 60676
[details]
Patch
Eric Seidel (no email)
Comment 4
2010-07-06 21:23:22 PDT
Committed
r62618
: <
http://trac.webkit.org/changeset/62618
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug