WebCore/html/HTMLConstructionSite.h
@@ -72,6 +72,8 @@ public:
     void generateImpliedEndTagsWithExclusion(const AtomicString& tagName);
 
     Element* currentElement() const { return m_openElements.top(); }
+    Element* oneBelowTop() const { return m_openElements.oneBelowTop(); }
+
     HTMLElementStack* openElements() const { return &m_openElements; }
     HTMLFormattingElementList* activeFormattingElements() const { return &m_activeFormattingElements; }
 
